<?xml version="1.0"?>
<package format="2">
  <name>rll_common</name>
  <version>0.0.0</version>
  <description>The rll_common package</description>

  <maintainer email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</maintainer>
  <license>GPLv3+</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
