<?xml version="1.0"?>
<package format="2">
  <name>rll_move</name>
  <version>0.0.0</version>
  <description>The rll_move package</description>

  <maintainer email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</maintainer>

  <license>GPLv3+</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rll_moveit_testing</url> -->

  <author email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</author>

  <depend>rll_worker</depend>
  <depend>rll_msgs</depend>
  <depend>schunk_gripper_egl90</depend>
  <depend>moveit_wrapper</depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
