<?xml version="1.0"?>
<package format="2">
  <name>rll_worker</name>
  <version>0.0.1</version>
  <description>The rll_worker package</description>

  <maintainer email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</maintainer>

  <license>GPLv3+</license>

  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
